--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "test",
+  "name": "sort_sample",
   "version": "1.0.0",
-  "description": "test",
+  "description": "sort sample",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write src"
   },
   "author": "kooreme",
   "license": "MIT",
   "dependencies": {
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1"
   }
 }
